--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
-.app {
+body {
     height: 100vh;
-    background-repeat: no-repeat;
-    background-position: center;
+    background-image: url(../src/background.png);
     background-size: cover;
+    background-repeat: no-repeat;
 }
