--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 body {
     height: 100vh;
     background-image: url(../src/background.png);
-    background-size: cover;
+    background-size: auto;
     background-repeat: no-repeat;
 }
